웹 UI 실시간 피드백 시스템 구현 및 크롤링 성능 개선
- WebSocket 기반 실시간 진행률/상태 업데이트 시스템 추가
- 국세청 판례 크롤링 수집량 1000→5000개로 확대
- 진행률 바 애니메이션 및 상태 컨테이너 UI 개선
- gitignore에 *.db, *venv/ 패턴 추가
- 웹서버 포트 8001로 변경

--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,7 @@ celerybeat.pid
 .venv
 env/
 venv/
+*venv/
 ENV/
 env.bak/
 venv.bak/
@@ -113,6 +114,7 @@ updated_cases/
 *.xlsx
 *.csv
 *.log
+*.db
 
 # IDE
 .vscode/
