--- a/fly.toml
+++ b/fly.toml
@@ -7,7 +7,8 @@ app = 'taxupdater'
 primary_region = 'sin'
 
 [build]
-  dockerfile = "Dockerfile"
+  dockerfile = "./Dockerfile"
+  context = "."
 
 [http_service]
   internal_port = 8080
