Fly.io 배포 설정 개선: Dockerfile.fly 사용 및 .dockerignore 추가

--- a/fly.toml
+++ b/fly.toml
@@ -7,8 +7,7 @@ app = 'taxupdater'
 primary_region = 'sin'
 
 [build]
-  dockerfile = "./Dockerfile"
-  context = "."
+  dockerfile = "Dockerfile.fly"
 
 [http_service]
   internal_port = 8080
