--- a/fly.toml
+++ b/fly.toml
@@ -17,6 +17,10 @@ primary_region = 'sin'
   min_machines_running = 0
   processes = ['app']
 
+[mounts]
+  source = "taxupdater_data"
+  destination = "/data"
+
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
